<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fluid_pink_two"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/red"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_instruction"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="2dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="@string/no_connection_description"
                />

            <Button
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/ok"
                style="@style/Button.Default"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
